syntax = "proto3";

import 'google/protobuf/empty.proto';
import 'google/protobuf/wrappers.proto';

package filesGrpc;

service FilesGrpcService {
  
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileChunk);
  
  rpc UploadFile(stream UploadFileChunk) returns (google.protobuf.Empty);
  
  rpc GetFiles(GetFilesRequest) returns (GetFilesReply);
}

message DownloadFileRequest {
  string fileId = 1;
}

message DownloadFileChunk {
  string fileName = 1;
  bytes bytes = 2;
  string contentType = 3;
}

message UploadFileChunk {
  string fileName = 1;
  bytes bytes = 2;
  string contentType = 3;
  
  google.protobuf.StringValue folderId = 4;
}

message File {
  string id = 1;
  string name = 2;
  int32 sizeBytes = 3;
}

message Folder {
  string id = 1;
  string name = 2;
  repeated File files = 3;
}

message GetFilesRequest {
  google.protobuf.StringValue folderId = 1;
}

message GetFilesReply {
  repeated Folder folders = 1;
  repeated File files = 2;
}